@@ -326,15 +326,11 @@ if (isActionAccessible($guid, $connection2, '/modules/Planner/planner_edit.php')
 						</tr>
 						<tr>
 							<td>
-								<b><?php echo __($guid, 'Summary') ?> *</b><br/>
+								<b><?php echo __($guid, 'Summary') ?></b><br/>
 								<span class="emphasis small"><?php echo __($guid, 'Will be overwritten by Smart Block titles.') ?><br/></span>
 							</td>
 							<td class="right">
 								<input name="summary" id="summary" maxlength=255 value="<?php echo htmlPrep($row['summary']) ?>" type="text" class="standardWidth">
-								<script type="text/javascript">
-									var summary=new LiveValidation('summary');
-									summary.add(Validate.Presence);
-								</script>
 							</td>
 						</tr>
 						<tr>
