@@ -66,6 +66,7 @@ v13.0.00
 		Planner: fixed lesson plan duplicate return bug, when not in current year
 		Planner: improved readability of Unit Overview in lesson plan view, by removing chat section where no messages exist
 		Planner: added field to mark whether unit should be included in curriculum maps and other summaries
+		Planner: made lesson plan Summary field optional, auto grabs content from Lesson Details field if blank
 		Resources: improved usability of tag entry interface
 		School Admin: fixed timezone issue in managing special days
 		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
